// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SnackBar > when snacks values are not set > matches the snapshot 1`] = `
"<teleport-stub to="#teleports">
  <!--v-if-->
</teleport-stub>"
`;

exports[`SnackBar > when snacks values are set > when snacks values are more than 1 > matches the snapshot 1`] = `
"<teleport-stub to="#teleports">
  <div class="wrapper slide-left-right-enter-from slide-left-right-enter-active">
    <div class="mBM snackbar">
      <div class="strong smallFont centerItems spaceBetween error messageBar">
        <p class="sentenceCase">content-0</p><button class="centerItems buttonLink" type="button">
          <phx class="icon" aria-hidden="true" size="24" weight="regular"></phx><span class="clamp text visuallyHidden"> Clear snack </span>
        </button>
      </div>
    </div>
    <div class="mBM snackbar">
      <div class="strong smallFont centerItems spaceBetween error messageBar">
        <p class="sentenceCase">content-1</p><button class="centerItems buttonLink" type="button">
          <phx class="icon" aria-hidden="true" size="24" weight="regular"></phx><span class="clamp text visuallyHidden"> Clear snack </span>
        </button>
      </div>
    </div>
    <div class="mBM snackbar">
      <div class="strong smallFont centerItems spaceBetween error messageBar">
        <p class="sentenceCase">content-2</p><button class="centerItems buttonLink" type="button">
          <phx class="icon" aria-hidden="true" size="24" weight="regular"></phx><span class="clamp text visuallyHidden"> Clear snack </span>
        </button>
      </div>
    </div>
    <div class="mBM snackbar">
      <div class="strong smallFont centerItems spaceBetween error messageBar">
        <p class="sentenceCase">content-3</p><button class="centerItems buttonLink" type="button">
          <phx class="icon" aria-hidden="true" size="24" weight="regular"></phx><span class="clamp text visuallyHidden"> Clear snack </span>
        </button>
      </div>
    </div>
  </div>
</teleport-stub>"
`;

exports[`SnackBar > when snacks values are set > when value is { content: 'content', id: 'id', type: 'error' } > matches the snapshot 1`] = `
"<teleport-stub to="#teleports">
  <div class="wrapper slide-left-right-enter-from slide-left-right-enter-active">
    <div class="mBM snackbar">
      <div class="strong smallFont centerItems spaceBetween error messageBar">
        <p class="sentenceCase">content</p><button class="centerItems buttonLink" type="button">
          <phx class="icon" aria-hidden="true" size="24" weight="regular"></phx><span class="clamp text visuallyHidden"> Clear snack </span>
        </button>
      </div>
    </div>
  </div>
</teleport-stub>"
`;

exports[`SnackBar > when snacks values are set > when value is { content: 'content', id: 'id', type: 'info' } > matches the snapshot 1`] = `
"<teleport-stub to="#teleports">
  <div class="wrapper slide-left-right-enter-from slide-left-right-enter-active">
    <div class="mBM snackbar">
      <div class="strong smallFont centerItems spaceBetween info messageBar">
        <p class="sentenceCase">content</p><button class="centerItems buttonLink" type="button">
          <phx class="icon" aria-hidden="true" size="24" weight="regular"></phx><span class="clamp text visuallyHidden"> Clear snack </span>
        </button>
      </div>
    </div>
  </div>
</teleport-stub>"
`;

exports[`SnackBar > when snacks values are set > when value is { content: 'content', id: 'id', type: 'success' } > matches the snapshot 1`] = `
"<teleport-stub to="#teleports">
  <div class="wrapper slide-left-right-enter-from slide-left-right-enter-active">
    <div class="mBM snackbar">
      <div class="strong smallFont centerItems spaceBetween success messageBar">
        <p class="sentenceCase">content</p><button class="centerItems buttonLink" type="button">
          <phx class="icon" aria-hidden="true" size="24" weight="regular"></phx><span class="clamp text visuallyHidden"> Clear snack </span>
        </button>
      </div>
    </div>
  </div>
</teleport-stub>"
`;
